before trying to change services to ministries

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ $primary-dark: #233a6c;
 $secondary: #ed9f5f;
 $black: #0e0e0e;
 $white: #ffffff;
-$white-offset: #ffceab;
+$white-offset: #f8dcc8;
 $steel: #5a5a5c;
 
 // Links
